# openenv-RL

./: .gitignore  README.md  baseline_rewards.json  demo.html
driftpa/: Dockerfile  README.md  client.py  colab_training.ipynb  eval_baseline.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
driftpa/scenarios/: generator.py
driftpa/server/: Dockerfile  app.py  environment.py
